Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
 
 4.       私有云部署
     彻底排除窃取隐私可能,支持自有域名部署可搭建私有云,无需更新客户端,即可热切换到私有服务，来去自由。
-</code></pre>
 
-<p>GoBelieve IM云平台支持功能：
-    1.语音，图片，文字。
-    2.群组
-    3.聊天室
-GoBelieve IM云平台提供多平台支持：
-    1.IOS
-    2.Android
-    3.web
-单台50w并发，消息 3000条/s  32g 16核  支持服务器的超大集群</p>
+5.  IM云平台支持功能：
+    1).语音，图片，文字。
+    2).群组
+    3).聊天室
+
+6.  提供多平台支持：
+   1).IOS
+   2).Android
+   3).web
+
+7. 私有服务器性能指标
+   1）单台50w并发，3000条/s消息发送量(32g,16核),支持服务器的超大集群.
+</code></pre>
       </section>
     </div>
 
